--- a/css/styles.css
+++ b/css/styles.css
@@ -12,17 +12,23 @@
     font-family: 'Roboto';
     font-weight: 400;
 }
+.portfolio-body {
+    font-family: 'Roboto';
+    font-weight: 400;
+}
 a{
     text-decoration: none;
 }
 .header-link {
     color: var(--header-color);
-    font-size: 14px;
+    font-style: normal;
     font-weight: 500;
-    line-height: 1.1;
+    font-size: 14px;
+    line-height: 16px;
     letter-spacing: 0.02em;
 }
-.header-link:hover {
+.header-link:hover,
+.header-link:focus {
     color: var(--hover-color);
 }
 ul {
@@ -34,6 +40,8 @@ ul {
     font-style: normal;
     font-weight: 700;
     font-size: 26px;
+    line-height: 31px;
+    letter-spacing: 0.03em;
 }
 .header-logo {
     color: var(--hover-color);
@@ -49,27 +57,34 @@ ul {
 }
 .section-text {
     color: var(--header-color-bg);
-    font-size: 44px;
+    font-style: normal;
     font-weight: 900;
+    font-size: 44px;
+    line-height: 60px;
     text-align: center;
-    line-height: 1.16;
     letter-spacing: 0.06em;
     text-transform: uppercase;
 }
 .section-btn {
     color: var(--header-color-bg);
     background-color: var(--hover-color);
+    font-style: normal;
     font-weight: 700;
     font-size: 16px;
-    line-height: 1.88;
+    line-height: 30px;
+    display: flex;
+    align-items: center;
     text-align: center;
     letter-spacing: 0.06em;
     cursor: pointer;
+    border: none;
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 .section-btn:hover {
     background-color: var(--hover-button);
 }
-.features-header {
+.header-invisible {
     position: absolute;
     white-space: nowrap;
     width: 1px;
@@ -83,9 +98,10 @@ ul {
 }
 .features-item-header {
     color: var(--header-color);
+    font-style: normal;
     font-weight: 700;
     font-size: 14px;
-    line-height: 1;
+    line-height: 16px;
     letter-spacing: 0.03em;
     text-transform: uppercase;
 }
@@ -94,23 +110,26 @@ ul {
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
-    line-height: 1.71;
+    line-height: 24px;
     letter-spacing: 0.03em;
 }
 .activity-header {
     color: var(--header-color);
-    font-size: 36px;
     font-style: normal;
-    letter-spacing: 0.03em;
     font-weight: 700;
-    line-height: 1;
+    font-size: 36px;
+    line-height: 42px;
+    text-align: center;
+    letter-spacing: 0.03em;
 }
 .team-header {
     color: var(--header-color);
+    font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
     font-size: 36px;
-    line-height: 1;
+    line-height: 42px;
+    text-align: center;
     letter-spacing: 0.03em;
 }
 .team-list-item {
@@ -122,47 +141,90 @@ ul {
 .team-member {
     font-size: 16px;
     color: var(--header-color);
-    letter-spacing: 0.03em;
-    font-weight: 500;
     font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
     text-align: center;
+    letter-spacing: 0.03em;
 }
 .team-text {
-    font-size: 16px;
     color: var(--text-color);
-    letter-spacing: 0.03em;
-    font-weight: 400;
     font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
     text-align: center;
+    letter-spacing: 0.03em;
 }
 .footer {
     background-color: var(--footer-color-bg);
 }
 .footer-link {
-    font-size: 14px;
     color: var(--header-color-bg);
-    letter-spacing: 0.03em;
-    font-weight: 400;
     font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
 }
 .address-link-footer {
     color: var(--text-color);
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
-    line-height: 1.71;
+    line-height: 24px;
     letter-spacing: 0.03em;
 }
-.footer-link:hover {
+.footer-link:hover,
+.footer-link:focus {
     color: var(--hover-color);
 }
 .footer-link-logo {
     color: var(--header-color-bg);
-    line-height: 1.1;
-    letter-spacing: 0.02em;
+    font-style: normal;
+    font-weight: 700;
     font-size: 26px;
-    font-weight: 500;
+    line-height: 31px;
+    letter-spacing: 0.03em;
 }
-.footer-link-logo:hover {
+.footer-link-logo:hover,
+.footer-link-logo:focus {
     color: var(--hover-color);
+}
+.item-btn {
+    font-family: 'Roboto';
+    color: var(--header-color);
+    background-color: var(--team-color-bg); 
+    align-items: center;
+    cursor: pointer;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    border-radius: 4px;
+    border: none;
+}
+.item-btn:hover {
+    color: var(--header-color-bg);
+    background-color: var(--hover-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+.portfolio-header {
+    color: var(--header-color);
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 36px;
+    letter-spacing: 0.06em;
+}
+.portfolio-text{
+    color: var(--text-color);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 30px;
+    letter-spacing: 0.03em;
 }
